# cmake_tutorial

./: CMakeLists.txt  LICENSE  README.md
configured/: config.hpp.in
console/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/simple_lib/: CMakeLists.txt  simple_lib.cpp  simple_lib.h
